--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,20 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "helmet": "^7.1.0",
     "langchain": "^0.3.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
+    "puppeteer": "^23.8.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.1.2",
-    "helmet": "^7.1.0",
-    "body-parser": "^1.20.2"
-  },  
+    "swagger-ui-express": "^4.1.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IvsonSantana/ProjetoResidenciaLLM.git"
