--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "puppeteer": "^23.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.1.2"
