--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "Back-End-Residencia",
+  "version": "1.0.0",
+  "description": "Api com llm para fornecer recomendações de curriculo",
+  "main": "app.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IvsonSantana/Back-end-PI-Web.git"
+  },
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
@@ -9,6 +23,8 @@
     "pdf-image": "^2.0.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.1.2",
     "pdf2pic": "^3.1.3"
   }
 }
